Fixed bug where hover menu appeared behind the filter panel in the feed view

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -84,6 +84,7 @@ nav span {
   visibility: visible;
   display: block;
   opacity: 1;
+  z-index: 10;
 }
 
 .dropLink {
